--- a/src/components/task/task.module.css
+++ b/src/components/task/task.module.css
@@ -7,4 +7,42 @@
     border-radius: 20px;
     margin-bottom: 10px;
     box-shadow: 0 0 25px rgba(186, 186, 186, .25);
+
+    .task:last-child {
+        margin-bottom: 0;
+    }
+
+    .task-check {
+        position: absolute;
+        left: 10px;
+        top: 10px;
+    }
+
+
+    .task-check input {
+        width: 40px;
+        height: 50px;
+        background: none;
+    }
+
+    .task-info {
+        width: 100%;
+
+        .task-info_title {
+            margin: 0;
+        }
+
+        .task-info_desc {
+            margin: 0;
+        }
+    }
+
+    .task-actions {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        top: 10px;
+        right: 10px;
+    }
+
 }
