add taskList with types

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+
+.main-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+}
